--- a/Module1/Mo1.html
+++ b/Module1/Mo1.html
@@ -13,7 +13,7 @@
         <li>Music</li>
         <li>Travel</li>
     </ul>
-    <img src="img/1.jpg" alt="Eror 4">
+    <img src="img/1" alt="Eror 4">
     <p>Lefуstyle</p>
     <p></p>
     <h3>More than just a music festival </h3>
