--- a/Module1/Index.html
+++ b/Module1/Index.html
@@ -8,12 +8,20 @@
 </head>
 <body>
     <ul>
-        <li>Lifestyle</li>
-        <li>Photodiary</li>
-        <li>Music</li>
-        <li>Travel</li>
+        <li>
+            <a href="#">lifestyle</a>
+        </li>
+        <li>
+            <a href="#">Photodiary</a>
+        </li>
+        <li>
+         <a href="#">Photodiary</a>
+        </li>
+        <li>
+        <a href="#">Travel</a>
+        </li>
     </ul>
-    <img src="img/1" alt="Eror 4">
+    <img src="img/1.jpg" alt="Eror 4">
     <p>Lefуstyle</p>
     <p></p>
     <h3>More than just a music festival </h3>
